cabal-version:       2.2
name:                constrained-toolbox
version:             0.1
synopsis:            Run isolated toolbox containers with podman
description:
        This tool (originally based on the toolbox-constrained project)
        allows running isolated toolbox containers with podman.
        Mounting of home and host integration are not enabled by default,
        but one can choose to enable such capabilities specified in
        a toml configuration file.
license:             Apache-2.0
license-file:        LICENSE
author:              Jens Petersen <juhpetersen@gmail.com>
maintainer:          Jens Petersen <juhpetersen@gmail.com>
copyright:           2026  Jens Petersen <juhpetersen@gmail.com>
category:            Utility
homepage:            https://github.com/juhp/constrained-toolbox
bug-reports:         https://github.com/juhp/constrained-toolbox/issues
build-type:          Simple
extra-doc-files:     README.md
                     ChangeLog.md
                     example/config.toml
tested-with:         GHC == 8.10.7
                      || == 9.0.2
                      || == 9.2.8
                      || == 9.4.8
                      || == 9.6.7
                      || == 9.8.4
                      || == 9.10.3
                      || == 9.12.4
                      || == 9.14.1

source-repository head
  type:                git
  location:            https://github.com/juhp/constrained-toolbox.git

executable constrained-toolbox
  main-is:             Main.hs
  other-modules:       Paths_constrained_toolbox
  autogen-modules:     Paths_constrained_toolbox
  hs-source-dirs:      src
  build-depends:       base < 5
                     , directory
                     , extra
                     , filepath
                     , containers
                     , process
                     , simple-cmd >= 0.2.3
                     , simple-cmd-args >= 0.1.8
                     , text
                     , toml-reader
                     , unix
  default-language:    Haskell2010
  ghc-options:         -Wall
  if impl(ghc >= 8.0)
    ghc-options:       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.10)
    ghc-options:       -Wunused-packages
